--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"name": "jQuery Foundation and other contributors",
 		"url": "https://github.com/jquery/jquery-ui/blob/1.9.2/AUTHORS.txt"
 	},
+	"main": "ui/jquery.ui.widget.js",
 	"maintainers": [
 		{
 			"name": "Scott González",
